--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,13 +174,188 @@ img {
 
 
 /*=============== HOME ===============*/
+.home__container,
+.home__data,
+.home__article,
+.home__images,
+.home__footer {
+  display: grid;
+}
 
+.home__container {
+  padding-block: 7.5rem 2.5rem;
+  row-gap: 1.5rem;
+}
+
+.home__data {
+  text-align: center;
+}
+
+.home__subtitle {
+  font-size: var(--small-font-size);
+}
+
+.home__titles {
+  margin-block: .5rem 2rem;
+}
+
+.home__title {
+  font-size: var(--biggest-font-size);
+  transform: translateY(10rem) scale(0.2);
+  opacity: 0;
+  transition: transform .4s .3s, opacity .3s;
+}
+
+.home__button,
+.home__social,
+.home__controls,
+.home__navigation {
+  display: flex;
+}
+
+.home__button {
+  justify-self: center;
+  align-items: center;
+  column-gap: .5rem;
+  font-weight: var(--font-semi-bold);
+  color: var(--title-color);
+}
+
+.home__button i {
+  font-weight: initial;
+  font-size: 1.25rem;
+  transition: transform .4s;
+}
+
+.home__button:hover i {
+  transform: translateX(.5rem);
+}
+
+.home__article {
+  width: 270px;
+  place-items: center;
+  padding-block: 1rem;
+}
+
+.home__card {
+  position: relative;
+}
+
+.home__circle {
+  width: 270px;
+  height: 270px;
+  border-radius: 50%;
+  opacity: 0;
+  transform: scale(0);
+  transition: opacity .1s ease-out, transform 1s;
+}
+
+.home__circle-1 {
+  background-color: var(--first-color);
+}
+.home__circle-2 {
+  background-color: var(--second-color);
+}
+.home__circle-3 {
+  background-color: var(--third-color);
+}
+
+.home__img-1,
+.home__img-2 {
+  position: absolute;
+  width: 200px;
+  filter: drop-shadow(0 20px 12px hsla(0, 0%, 0%, .4));
+  transition: transform .7s .2s cubic-bezier(0.2, 0.9, 0.3, 1.3), opacity .3s;
+  opacity: 0;
+}
+
+.home__img-1 {
+  bottom: 7rem;
+  left: -1.5rem;
+  transform: translateX(-5rem) rotate(60deg);
+}
+
+.home__img-2 {
+  bottom: 3rem;
+  right: -1.5rem;
+  transform: translateX(5rem) rotate(-60deg);
+
+}
+
+.home__footer {
+  row-gap: 3rem;
+}
+
+.home__social {
+  justify-content: center;
+  column-gap: .5rem;
+}
+
+.home__social-link {
+  color: var(--title-color);
+  font-size: 1.5rem;
+}
+
+.home__controls {
+  flex-direction: column;
+  align-items: center;
+  row-gap: 2rem;
+}
 
 /* Swiper class */
+.swiper {
+  margin-inline: initial;
+}
 
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  content: '';
+}
+
+.swiper-pagination {
+  position: initial;
+  font-weight: var(--font-semi-bold);
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  position: initial;
+  width: initial;
+  height: initial;
+  font-size: 1.25rem;
+  padding: 3px 20px;
+} 
+
+.swiper-button-prev {
+  background-color: var(--black-color);
+  color: var(--white-color);
+}
+
+.swiper-button-next {
+  background-color: var(--white-color);
+  color: var(--black-color);
+}
 
 /* Swiper animation */
+.swiper-slide-active .home__title {
+  transform: translateY(0)  scale(1);
+  opacity: 1;
+}
 
+.swiper-slide-active .home__circle {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.swiper-slide-active .home__img-1 {
+  transform: translateX(0) rotate(15deg);
+  opacity: 1;
+}
+
+.swiper-slide-active .home__img-2 {
+  transform: translateX(0) rotate(-30deg);
+  opacity: 1;
+}
 
 /*=============== SCROLL BAR ===============*/
 
