--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,7 +171,9 @@ img {
 }
 
 /* Background header */
-
+.bg-header {
+  box-shadow: 0 2px 16px hsla(0, 0%, 0%, .1);
+}
 
 /*=============== HOME ===============*/
 .home__container,
@@ -358,13 +360,141 @@ img {
 }
 
 /*=============== SCROLL BAR ===============*/
+::-webkit-scrollbar {
+  width: 0.6rem;
+  background-color: hsl(0, 0%, 70%);
+}
 
+::-webkit-scrollbar-thumb {
+  background-color: hsl(0, 0%, 60%);
+}
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
-
+@media screen and (max-width: 330px) {
+  .container {
+    margin-inline: 1rem;
+  }
+  .home__title {
+    font-size: 1.8rem;
+  }
+  .home__circle {
+    width: 220px;
+    height: 220px;
+  }
+  .home__img-1,
+  .home__img-2 {
+    width: 160px;
+  }
+  .home__img-1 {
+    bottom: 6rem;
+  }
+}
 
 /* For medium devices */
-
+@media screen and (min-width: 540px) {
+  .home__footer {
+    margin-inline: 1.5rem;
+    grid-template-columns: repeat(2, max-content);
+    justify-content: space-between;
+  }
+  .home__controls {
+    flex-direction: row;
+    column-gap: 2rem;
+  }
+  .home__navigation {
+    order: -1;
+    align-self: flex-end;
+  }
+}
 
 /* For large devices */
+@media screen and (min-width: 1023px) {
+  .nav {
+    height: calc(var(--header-height) + 2rem);
+  }
+  .nav__toggle,
+  .nav__close {
+    display: none;
+  }
+  .nav__link {
+    font-size: var(--normal-font-size);
+    color: var(--title-color);
+  }
+  .nav__social {
+    column-gap: 1rem;
+  }
+  .nav__social-link {
+    color: var(--title-color);
+  }
+  .nav__menu {
+    display: flex;
+    column-gap: 3rem;
+    align-items: center;
+  }
+  .nav__list {
+    flex-direction: row;
+    column-gap: 3rem;
+  }
+}
+
+@media screen and (min-width: 1150px) {
+  .container {
+    margin-inline: auto;
+  }
+  .home__container {
+    grid-template-columns: 450px 600px;
+    grid-template-rows: 470px;
+    align-items: center;
+    justify-content: center;
+    column-gap: 2rem;
+    row-gap: 6rem;
+    padding-top: 12rem;
+  }
+  .home__footer {
+    grid-column: 1/3;
+    margin-inline: 0;
+  }
+  .home__data {
+    text-align: initial;
+  }
+  .home__subtitle {
+    font-size: var(--normal-font-size);
+  }
+  .home__titles {
+    margin-bottom: 3rem;
+  }
+  .home__button {
+    justify-self: flex-start;
+    z-index: 2;
+  }
+  .home__images {
+    position: absolute;
+    top: 9rem;
+  }
+  .home__card {
+    transform: translateX(15rem);
+  }
+  .home__circle {
+    width: 570px;
+    height: 570px;
+  }
+  .home__img-1,
+  .home__img-2 {
+    width: 420px;
+  }
+  .home__img-1 {
+    bottom: 14rem;
+    left: -3rem;
+    transform: translateX(-25rem) rotate(60deg);
+  }
+  .home__img-2 {
+    bottom: 6rem;
+    right: -3rem;
+    transform: translateX(25rem) rotate(60deg);
+  }
+  .swiper-button-prev,
+  .swiper-button-next {
+    font-size: 1.5rem;
+  }
+}
